# rafflebot

./: .gitignore  .prettierignore  Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml
agent/: SKILL.md  raffle-cli.ts  seed-demo.ts  tools.ts
agent/rafflebot-skill/: SKILL.md
app/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
app/.vercel/output/: builds.json
app/.vercel/output/diagnostics/: cli_traces.json  trace
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/history/: page.tsx
app/src/app/my-tickets/: page.tsx
app/src/components/: BuyTicketsModal.tsx  CarnivalFooter.tsx  Countdown.tsx  MockRaffleCard.tsx  Navbar.tsx  RaffleCard.tsx  WalletProvider.tsx  index.ts
app/src/components/illustrations/: RaffleDrum.tsx  StarDecoration.tsx  TentIllustration.tsx  (+2 more)
app/src/hooks/: index.ts  useBuyTickets.ts  useClaimPrize.ts  useProgram.ts  useRaffles.ts
app/src/lib/: format.ts
demo/: cli-demo.tape  fake-cli.sh  narration-script.md  submission-writeup.md  test.tape
demo/gemini-reference/: App.tsx  constants.ts  index.html  metadata.json  package.json  types.ts
demo/gemini-reference/components/: Layout.tsx  RaffleTable.tsx  TicketStub.tsx
demo/gemini-reference/pages/: Home.tsx  Ledger.tsx  RaffleDetail.tsx
demo/gemini-reference/services/: mockService.ts
docs/: ARCHITECTURE.md  PROJECT-STATUS.md  e2e-test-results.md
programs/rafflebot/: Cargo.toml
programs/rafflebot/src/: lib.rs
scripts/: buy-test-tickets.ts  create-test-raffle.ts  demo-flow.ts  e2e-devnet-test.ts
tests/: rafflebot.ts
(+3 files in other folders)
