[package]
name = "rafflebot"
version = "0.1.0"
description = "AI agent that creates and runs provably fair raffles on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rafflebot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
