[package]
name = "rafflebot"
version = "0.1.0"
description = "AI agent that creates and runs provably fair raffles on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rafflebot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
switchboard-on-demand = "0.11.3"
blake3 = ">=1.0, <1.8.3"
